--- a/xtrm-feedback-server/html/index.html
+++ b/xtrm-feedback-server/html/index.html
@@ -6,9 +6,9 @@
 		<script src="/socket.io/socket.io.js"></script>
 		<script>
 			var socket = io();
-			socket.on('message', function(msg){
-					$('#messages').append($('<li>').text(msg));
-				});
+			socket.on('buttonPressed', function(msg){
+				$('#messages').append($('<li>').text(msg));
+			});
 		</script>
 		<style>
 			* { margin: 0; padding: 0; box-sizing: border-box; }
