--- a/xtrm-feedback-server/html/index.html
+++ b/xtrm-feedback-server/html/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>FLL</title>
-		<script src="/jquery-1.11.1.js"></script>
+		<script src="/jquery-1.11.1.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 		<script>
 			var totalCount = 0;
