--- a/xtrm-marconi-web/index.html
+++ b/xtrm-marconi-web/index.html
@@ -59,10 +59,11 @@
 					<!-- <li><a href="#we">Seguici</a></li> -->
 				</ul>
 			</div>
+			<img style="width: 300px; margin-top: 30px" src="logo_small.png" />
 		</div>
 		<div class="block" id="fll-cosa">
 			<h2>Cos'è la FLL?</h2>
-			<p>La FLL è una competizione internazionale a squadre di scienza e robotica, a cui partecipano ragazzi dai 9 ai 16 anni da tutto il mondo. Ci sono infatti più di 20.000 squadre iscritte, per più di 250.000 ragazzi.</p>
+			<p>La FLL è una competizione internazionale a squadre di scienza e robotica, a cui partecipano ragazzi dai 9 ai 16 anni da tutto il mondo. Ci sono infatti più di 20˙000 squadre iscritte, per più di 250˙000 ragazzi.</p>
 			<span>Non solo robotica!</span>
 			<p>I partecipanti non devono soltanto progettare, costruire e programmare un robot autonomo, ma anche applicare le conoscenze acquisite a problemi reali per trovare soluzioni innovative.</p>
 			<img src="fll-triangle.png">
@@ -102,7 +103,8 @@
 			</p>
 		</div>
 		<div class="block" id="footer">
-			
+			<iframe src="http://ghbtns.com/github-btn.html?user=matteocontrini&amp;repo=xtrm-feedback&amp;type=watch&amp;size=large"
+			  allowtransparency="true" frameborder="0" scrolling="0" width="85" height="30"></iframe>
 		</div>
 	</body>
 </html>
