--- a/xtrm-marconi-web/index.html
+++ b/xtrm-marconi-web/index.html
@@ -5,21 +5,21 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 		<title>Marconi Xtrm - FIRST LEGO League</title>
-		
+
 		<meta name="description" content="Il sito ufficiale della squadra Marconi Xtrm di Rovereto. Scopri di più sul nostro progetto!">
 
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-		
+
 		<!-- Font -->
 		<link href="http://fonts.googleapis.com/css?family=Chelsea+Market" rel="stylesheet" type="text/css">
-		
+
 		<!-- Stylesheet -->
 		<link rel="stylesheet" type="text/css" href="style.css">
-		
+
 		<!-- jQuery -->
 		<script src="jquery-1.11.1.min.js"></script>
-		
+
 		<!-- Scripts -->
 		<script type="text/javascript" src="scripts.js"></script>
 
@@ -28,7 +28,7 @@
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		
+
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -49,14 +49,14 @@
 					<li><a href="#fll-cosa">Cos'è la FLL?</a></li>
 					<li><a href="#fll-pratica">La FLL, in pratica</a></li>
 					<li><a href="#fll-tema">Il tema per il 2014</a></li>
-					<li><a href="#worldclass"><u>Torna a trovarci</u></a></li>
-					<!-- <li><a href="#worldclass">La domanda "WORLD CLASS<sup>℠</sup>"</a></li> -->
-					<!-- <li><a href="#soluzione">La nostra soluzione</a></li> -->
+					<li><a href="#worldclass">La domanda "WORLD CLASS<sup>℠</sup>"</a></li>
+					<li><a href="#soluzione">La nostra soluzione</a></li>
 					<!-- <li><a href="#sol-prototipo">Soluzione: il prototipo</a></li> -->
 					<!-- <li><a href="#sol-tx">Soluzione: il trasmettitore</a></li> -->
 					<!-- <li><a href="#sol-rx">Soluzione: il ricevitore</a></li> -->
 					<!-- <li><a href="#why">Perché scegliere Xtrm Feedback?</a></li> -->
 					<!-- <li><a href="#we">Seguici</a></li> -->
+					<li><a href="#torna"><u>Torna a trovarci</u></a></li>
 				</ul>
 			</div>
 			<img style="width: 300px; margin-top: 30px" src="logo_small.png" />
@@ -96,6 +96,21 @@
 			<span>How could we improve the way that someone learns [topic]?</span>
 		</div>
 		<div class="block" id="worldclass">
+			<h2>La domanda "WORLD CLASS"</h2>
+			<p>Come possiamo migliorare il modo in cui gli studenti della scuola secondaria imparano nuovi argomenti delle materie essenziali?</p>
+			<p>La lezione frontale è poco efficace: gli studenti si limitano ad ascoltare l'insegnante e si annoiano, non riuscendo a rimanere attenti.</p>
+			<span>"Miscere utile dulci"</span>
+			<p>Il poeta Orazio lo diceva duemila anni fa e l'idea si applica facilmente al campo dell'istruzione. La risposta alla nostra domanda è quindi:</p>
+			<span>Intrattenere gli studenti</span>
+		</div>
+		<div class="block" id="soluzione">
+			<h2>La nostra soluzione</h2>
+			<p>L'idea è di rendere la lezione più stimolante, per tutti gli studenti.</p>
+			<p>Prendiamo come esempio una lezione in cui si svolgono degli esercizi di inglese o di grammatica italiana.</p>
+			<span>Come si può coinvolgere l'intera classe?</span>
+			<p>La nostra soluzione prevede un dispositivo elettronico con quattro pulsanti. L'insegnante può porre una domanda e le possibili risposte ed ogni studente ha la possiblità di rispondere.</p>
+		</div>
+		<div class="block" id="torna">
 			<h2>Torna presto!</h2>
 			<p>Il sito della squadra è ancora in sviluppo. Torna nei prossimi giorni per scoprire di più sul nostro progetto!</p>
 			<p>
