--- a/xtrm-marconi-web/index.html
+++ b/xtrm-marconi-web/index.html
@@ -51,12 +51,11 @@
 					<li><a href="#fll-tema">Il tema per il 2014</a></li>
 					<li><a href="#worldclass">La domanda "WORLD CLASS<sup>℠</sup>"</a></li>
 					<li><a href="#soluzione">La nostra soluzione</a></li>
-					<!-- <li><a href="#sol-prototipo">Soluzione: il prototipo</a></li> -->
-					<!-- <li><a href="#sol-tx">Soluzione: il trasmettitore</a></li> -->
-					<!-- <li><a href="#sol-rx">Soluzione: il ricevitore</a></li> -->
-					<!-- <li><a href="#why">Perché scegliere Xtrm Feedback?</a></li> -->
-					<!-- <li><a href="#we">Seguici</a></li> -->
-					<li><a href="#torna"><u>Torna a trovarci</u></a></li>
+					<li><a href="#sol-prototipo">Soluzione: il prototipo</a></li>
+					<li><a href="#sol-tx">Soluzione: il trasmettitore</a></li>
+					<li><a href="#sol-rx">Soluzione: il ricevitore</a></li>
+					<li><a href="#why">Perché scegliere Xtrm Feedback?</a></li>
+					<li><a href="#torna"><u>Seguici</u></a></li>
 				</ul>
 			</div>
 			<img style="width: 300px; margin-top: 30px" src="logo_small.png" />
@@ -109,10 +108,37 @@
 			<p>Prendiamo come esempio una lezione in cui si svolgono degli esercizi di inglese o di grammatica italiana.</p>
 			<span>Come si può coinvolgere l'intera classe?</span>
 			<p>La nostra soluzione prevede un dispositivo elettronico con quattro pulsanti. L'insegnante può porre una domanda e le possibili risposte ed ogni studente ha la possiblità di rispondere.</p>
+			<p><a href="#why">Perché la nostra soluzione migliora l'apprendimento?</a></p>
+		</div>
+		<div class="block" id="sol-prototipo">
+			<h2>Il prototipo della soluzione</h2>
+			<p>Abbiamo realizzato un prototipo della nostra soluzione.</p>
+			<p>Il dispositivo accennato è stato realizzato con una board elettronica, che invia i dati al ricevitore, cioè un server che visualizza i risultati su una pagina web.</p>
+			<p>L'insegnante può, dalla sua postazione, configurare il sistema e vedere e analizzare i risultati.</p>
+		</div>
+		<div class="block" id="sol-tx">
+			<h2>Soluzione: il trasmettitore</h2>
+			<p>Il trasmettitore (o telecomando) è il dispositivo che gli studenti usano per rispondere alla domanda</p>
+			<p>La board elettronica che gestisce il sistema è Spark Photon, una piccolissimo dispositivo dotato di connettività Wi-Fi al quale si possono collegare tutti gli accessori, shield e moduli compatibili con Arduino.</p>
+			<span>Spark Photon costa solo 15 €</span>
+		</div>
+		<div class="block" id="sol-rx">
+			<h2>Soluzione: il ricevitore</h2>
+			<p>Il ricevitore, o server, consiste in una pagina web che riceve e organizza i dati delle risposte date dagli studenti</p>
+			<span>Il software è completamente libero</span>
+			<p>Per l'insegnante sarà facile farsi un'idea della situazione della classe</p>
+		</div>
+		<div class="block" id="why">
+			<h2>Perché XTRM Feedback?</h2>
+			<p>La lezione frontale è ormai superata. La didattica alternativa si sta diffondendo nelle scuole. La nostra soluzione vuole aiutare questa tendenza.</p>
+			<p>Applicando il concetto di</p>
+			<span>Flipped classroom</span>
+			<p>cioè "classe capovolta", sono gli studenti che fanno la lezione. Si preparano un argomento e a scuola, con i nostri dispositvi, si sfidano ponendo domande ai gruppi avversari.</p>
+			<p>In questo modo, si garantisce una preparazione autonoma da parte di ciascuno studente e allo stesso tempo un clima di gioco e collaborazione.</p>
 		</div>
 		<div class="block" id="torna">
-			<h2>Torna presto!</h2>
-			<p>Il sito della squadra è ancora in sviluppo. Torna nei prossimi giorni per scoprire di più sul nostro progetto!</p>
+			<h2>Continua a seguirci!</h2>
+			<p>La nostra squadra presenterà il progetto alla selezione per il nord-ovest della FLL a Bolzano il 14 febbraio. Torna per sapere se avremo la possiblità di partecipare alla fase nazionale!</p>
 			<p>
 				<a style="color:white" href="https://docs.google.com/presentation/d/1c4ZI2PA9lBZhysFPEpXWR6IJLctjU31PbyD0sU0tFC4/edit?usp=sharing">Presentazione robotica educativa ("scuola aperta" ITT Marconi)</a>
 			</p>
