Server: moved css to folder

--- a/xtrm-feedback-server/html/index.html
+++ b/xtrm-feedback-server/html/index.html
@@ -6,6 +6,7 @@
 	<title>Xtrm Feedback | Risposte</title>
 	
 	<!-- Stylesheet -->
+	<link rel="stylesheet" type="text/css" href="reset.css" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 	
 	<!-- Chelsea Market font -->
