--- a/xtrm-feedback-server/html/index.html
+++ b/xtrm-feedback-server/html/index.html
@@ -99,7 +99,7 @@
 		</aside>
 		
 		<div style="clear:both"></div>
-		<pre data-bind="text: ko.toJSON($data, null, 2)"></pre>
+		<!-- <pre data-bind="text: ko.toJSON($data, null, 2)"></pre> -->
 	</div>
 	
 	<!-- jQuery -->
